fix header + shopping cart fix overflow

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -76,6 +76,10 @@
   display: none;
 }
 
+.header__section a {
+  color: initial;
+}
+
 .header .brand {
   font-size: 0.8rem;
   display: flex;
