--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -24,6 +24,7 @@ main {
 
 body {
   height: 100vh;
+  overflow-y: hidden;
 }
 
 #root {
